--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,10 @@ spring.servlet.multipart.location=/Users/Shared/family_image/
 spring.servlet.multipart.max-request-size=15MB
 spring.servlet.multipart.max-file-size=10MB
 
+#JSSESIONID 비활성화
+server.servlet.session.cookie.http-only=true
+server.servlet.session.tracking-modes=cookie
+
 ## Enable multipart uploads
 #spring.servlet.multipart.enabled=true
 ## Max file size
