2/7 - 구글 로그인 적용 - 호칭 검색 후 구성원 추가 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-# [서버포트 설정]
+# [ìë²í¬í¸ ì¤ì ]
 server.port=80
 
-# [타임리프 새로고침 설정]
+# [íìë¦¬í ìë¡ê³ ì¹¨ ì¤ì ]
 spring.thymeleaf.cache=false
 
-# Database 접속정보
+# Database ì ìì ë³´
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
 #jdbc:mysql://localhost:3306/family_title_db?serverTimezone=UTC&characterEncording=UTF8
@@ -13,30 +13,45 @@ spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/family_title_db?serve
 spring.datasource.username=smside
 spring.datasource.password=smside
 
-
-# mybatis 설정
+# mybatis ì¤ì 
 # clsspath: -> src/main/resources/
-# /**/*.xml 모든 폴더 안에 존재하는 모든 xml 파일
+# /**/*.xml ëª¨ë  í´ë ìì ì¡´ì¬íë ëª¨ë  xml íì¼
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
-## mybatis DTO 풀패키지 설정 side.family_title.user
+## mybatis DTO íí¨í¤ì§ ì¤ì  side.family_title.user
 mybatis.type-aliases-package=side.family_title.dto
 
-# logback 설정
-# window용
+# logback ì¤ì 
+# windowì©
 #logging.config=classpath:logback-spring.xml
-# mac용
+
+# macì©
 logging.config=classpath:logback-spring-mac.xml
 
-# 파일 업로드
+# íì¼ ìë¡ë
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=/Users/Shared/family_image/
 spring.servlet.multipart.max-request-size=15MB
 spring.servlet.multipart.max-file-size=10MB
 
-#JSSESIONID 비활성화
+
+
+#êµ¬ê¸ ë¡ê·¸ì¸ poperties íì¼ ë¡ë©
+#spring.profiles.include=oauth
+
+# google login
+google.auth.url=https://oauth2.googleapis.com
+google.login.url=https://accounts.google.com
+google.redirect.uri=http://localhost:80/login/oauth2/code/google
+google.client.id=502621013232-3roabfqhcr0ulud85v5im09na5ernt30.apps.googleusercontent.com
+google.secret=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
+google.auth.scope=profile,email,openid
+
+#JSSESIONID ë¹íì±í
 server.servlet.session.cookie.http-only=true
 server.servlet.session.tracking-modes=cookie
+
+
 
 ## Enable multipart uploads
 #spring.servlet.multipart.enabled=true
@@ -44,7 +59,7 @@ server.servlet.session.tracking-modes=cookie
 #spring.servlet.multipart.max-file-size=200MB
 ## Max Request Size
 #spring.servlet.multipart.max-request-size=215MB
-##spring json 기본 컨버터가 jackson 이므로 gson 으로 컨버터시 오류가 발생해서 기본을 gson으로 변경
+##spring json ê¸°ë³¸ ì»¨ë²í°ê° jackson ì´ë¯ë¡ gson ì¼ë¡ ì»¨ë²í°ì ì¤ë¥ê° ë°ìí´ì ê¸°ë³¸ì gsonì¼ë¡ ë³ê²½
 #spring.mvc.converters.preferred-json-mapper=gson
 
 #security.oauth2.client.registration.google.client-id= 502621013232-3roabfqhcr0ulud85v5im09na5ernt30.apps.googleusercontent.com
